<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prathameshshiralkar.apps.determinantcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_order_of_determinant"
        android:textSize="25sp"

        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        android:id="@+id/textView2"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="func_ord1"
        android:text="@string/order_1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="192dp"
        android:layout_marginBottom="105dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="func_ord2"
        android:text="@string/order_2"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="268dp"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:srcCompat="@mipmap/icon"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="20dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5644373101085191/8176400627" />

    <ImageView
        android:id="@+id/about"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:onClick="gotoabout"
        android:tint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <RelativeLayout
        android:id="@+id/layoutmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/button2"
        android:background="@android:color/white">

        <ProgressBar
            android:id="@+id/pbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@android:color/white"
            android:progressTint="@android:color/darker_gray"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="37dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:text="...by Prathamesh Shiralkar"
            android:textAlignment="textEnd"
            android:textSize="23sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="362dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            app:srcCompat="@mipmap/icon" />

        <TextView

            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="119dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="45sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>
